force-app/main/default/objects/Order_Request__c/Order_Request__c.object-meta.xml
<CustomObject>
    <description>This object will handle requested change order</description>
    <label>Order Request</label>
    <nameField>
        <displayFormat>OR-{00000}</displayFormat>
        <label>Order Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>