force-app/main/default/objects/Order_Request__c/fields/Arrival_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Service_Time__c</fullName>
    <label>Arrival Service Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>