force-app/main/default/objects/Order_Request__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Requests</relationshipLabel>
    <relationshipName>Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>