force-app/main/default/objects/Order_Request__c/fields/Booking_Product__c.field-meta.xml
<CustomField>
    <fullName>Booking_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Order Requests</relationshipLabel>
    <relationshipName>Order_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>