force-app/main/default/objects/Order_Request__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>