force-app/main/default/objects/Order_Request__c/fields/Date_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Departure__c</fullName>
    <label>Date of Departure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>