force-app/main/default/objects/Order_Request__c/fields/Departure_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Service_Time__c</fullName>
    <label>Departure Service Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>