force-app/main/default/objects/Order_Request__c/fields/Drop_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Drop_Terminal__c</fullName>
    <label>Drop Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>