force-app/main/default/objects/Order_Request__c/fields/Existing_Package__c.field-meta.xml
<CustomField>
    <fullName>Existing_Package__c</fullName>
    <label>Existing Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>