force-app/main/default/objects/Order_Request__c/fields/Flight_Number_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Arrival__c</fullName>
    <label>Flight Number Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>