force-app/main/default/objects/Order_Request__c/fields/Flight_Number_Departure__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Departure__c</fullName>
    <label>Flight Number Departure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>