force-app/main/default/objects/Order_Request__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <label>IGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>