force-app/main/default/objects/Order_Request__c/fields/isSubRequest__c.field-meta.xml
<CustomField>
    <fullName>isSubRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSubRequest</label>
    <type>Checkbox</type>
</CustomField>