force-app/main/default/objects/Order_Request__c/fields/Number_of_Infants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Infants__c</fullName>
    <label>Number of Infants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>