force-app/main/default/objects/Order_Request__c/fields/Order_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Request_Number__c</fullName>
    <label>Order Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>