force-app/main/default/objects/Order_Request__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>