force-app/main/default/objects/Order_Request__c/fields/Parent_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order Request</label>
    <referenceTo>Order_Request__c</referenceTo>
    <relationshipLabel>Order Requests (Parent Order Request)</relationshipLabel>
    <relationshipName>Order_Request</relationshipName>
    <type>Lookup</type>
</CustomField>