force-app/main/default/objects/Order_Request__c/fields/Pickup_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Terminal__c</fullName>
    <label>Pickup Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>