force-app/main/default/objects/Order_Request__c/fields/Refund_Rejection_comments__c.field-meta.xml
<CustomField>
    <fullName>Refund_Rejection_comments__c</fullName>
    <label>Refund Rejection comments</label>
    <type>TextArea</type>
</CustomField>