force-app/main/default/objects/Order_Request__c/fields/Rescheduling_Charges__c.field-meta.xml
<CustomField>
    <fullName>Rescheduling_Charges__c</fullName>
    <label>Rescheduling Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>