force-app/main/default/objects/Order_Request__c/fields/Serialized_Data__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Data__c</fullName>
    <label>Serialized Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>