force-app/main/default/objects/Order_Request__c/fields/Serialized_Data_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Data_Passenger__c</fullName>
    <label>Serialized Data Passenger</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>