force-app/main/default/objects/Order_Request__c/fields/Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Time__c</fullName>
    <label>Service Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>