force-app/main/default/objects/Order_Request__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>