force-app/main/default/objects/Order_Request__c/fields/STA_Time__c.field-meta.xml
<CustomField>
    <fullName>STA_Time__c</fullName>
    <label>STA Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>