force-app/main/default/objects/Order_Request__c/fields/STD_Time__c.field-meta.xml
<CustomField>
    <fullName>STD_Time__c</fullName>
    <label>STD Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>