force-app/main/default/objects/Order_Request__c/fields/Total_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Amount__c</fullName>
    <label>Total Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>