force-app/main/default/objects/Order_Request__c/fields/Type_of_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Amendment__c</fullName>
    <label>Type of Amendment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Passengers</fullName>
            </value>
            <value>
                <fullName>Upgrade Package</fullName>
            </value>
            <value>
                <fullName>Add Add-Ons</fullName>
            </value>
            <value>
                <fullName>All Add Passengers</fullName>
            </value>
            <value>
                <fullName>All Upgrade Package</fullName>
            </value>
            <value>
                <fullName>All Add Add-Ons</fullName>
            </value>
            <value>
                <fullName>All Passengers And Upgrade</fullName>
            </value>
            <value>
                <fullName>All Passengers And Add-Ons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>